2015-08-28  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * doc/whats-new-2.0.rst: Many updates from `diff`ing the `--help` output of
   version 1.4.1 vs now.
   * Makefile: build the project if needed when making a PDF
   * doc/index.rst: fixed inter-doc links to be relative
   * doc/user/blog-posts.rst: replaced link to 88m-reads.fa.gz with a working
   URL
   * doc/user/{choosing-table-sizes,guide}.rst: disambiguated :option:
   references so that they link properly.
   * scripts/README.txt: removed unhelpful file
   * scripts/normalize-by-median.py: replace `--force-single` with
   `--force_single`. Added help text for `--cutoff`.

2015-08-27  Titus Brown  <titus@idyll.org>

  * doc/dev/getting-started.rst: fixed a few misspellings.

2015-08-26  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * tests/test_scripts.py: removed the unused `_DEBUG_make_graph` function in
   favor of other debugging methods like `ipdb`. Added
   test_do_partition_no_big_traverse and test_extract_paired_reads_unpaired.

2015-08-24  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * khmer/khmer_args.py: Replaced sanitize_epilog() with santize_help() that
   reflows the text of ArgParse descriptions and epilog while preserving the
   formatting. Enhanced removal of Sphinx directives by replacing double
   backticks with the double quote character.
   * scripts/*.py: Renamed sanitize_epilog to sanitize_help; leading newlines
   from triple-quoted epilogs removed; formatting made consistent;
   sanitize_help and ComboFormatter added where it was missing; a couple
   script specific epilog reformatting (for use of `:doc:` and a
   hyperlink).
   * scripts/{count-median,filter-abund-single}.py: Fixed printing of output
   file name to do so instead of printing information about the file handle.
   * scripts/count-median.py: Added missing command so that example given
   actually works.
   * scripts/filter-abund-single.py: Removed redundant printing of output file
   names.